k8s/category-db/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: category-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: category-db
  template:
    metadata:
      labels:
        app: category-db
    spec:
      containers:
      - name: category-db
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
        # /docker-entrypoint-initdb.d 디렉토리에 init-script ConfigMap을 마운트합니다.
        - name: init-script
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: category-db-pvc
      # init-script ConfigMap을 볼륨으로 정의합니다.
      - name: init-script
        configMap:
          name: category-db-init-script
          # 실행 가능하도록 권한을 0755로 설정합니다.
          defaultMode: 0755
