k8s/category-db/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: category-db
spec:
  serviceName: category-db
  replicas: 1
  selector:
    matchLabels:
      app: category-db
  template:
    metadata:
      labels:
        app: category-db
    spec:
      containers:
      - name: category-db
        image: mongo:7-jammy
        ports:
        - containerPort: 27017
          name: mongodb
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
        - name: init-script
          mountPath: /docker-entrypoint-initdb.d
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "200m"
        livenessProbe:
          exec:
            command:
              - mongosh
              - --eval
              - "db.adminCommand('ping')"
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 10
        readinessProbe:
          exec:
            command:
              - mongosh
              - --eval
              - "db.adminCommand('ping')"
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 10
      volumes:
        - name: init-script
          configMap:
            name: category-db-init
  volumeClaimTemplates:
  - metadata:
      name: mongo-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "hostpath"
      resources:
        requests:
          storage: 1Gi
