k8s/category-db/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: category-db-service
spec:
  selector:
    app: category-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP # 클러스터 내부에서만 접근 가능
