k8s/category-db/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: category-db-network-policy
spec:
  podSelector:
    matchLabels:
      app: category-db
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: category-service
    ports:
    - protocol: TCP
      port: 27017
